--- a/sws/templates/base.html
+++ b/sws/templates/base.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+    {% include 'partials/_navbar.html' %}
+
     <section id="content" class="jumbotron">
         {% block content %}{% endblock %}
     </section>
