--- a/sws/templates/pages/index.html
+++ b/sws/templates/pages/index.html
@@ -3,9 +3,7 @@
 
 {% block content %}
 
-    <div class="container">
-        <h1>Index</h1>
-    </div>
+    {% include 'partials/_banner.html' %}
 
 {% endblock %}
 
