--- a/sws/templates/partials/_banner.html
+++ b/sws/templates/partials/_banner.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'css/_banner.css' %}">
+<link rel="stylesheet" href="{% static 'css/partials/_banner.css' %}">
 
 <section id="banner" class="banner">
     <div class="container-fluid">
