--- a/sws/templates/pages/index.html
+++ b/sws/templates/pages/index.html
@@ -1,9 +1,75 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
+    <section id="index" class="index">
+        <link rel="stylesheet" href="{% static 'css/index.css' %}">
 
-    {% include 'partials/_banner.html' %}
+        {% include 'partials/_banner.html' %}
+
+        <section id="latest" class="latest">
+            <div class="container">
+                <div class="title text-center">
+                    <h1>LATEST ARRIVALS</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+
+                <div class="latest-arrivals">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
+                                {% include 'partials/_card.html' %}
+                            </div>
+                            <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
+                                {% include 'partials/_card.html' %}
+                            </div>
+                            <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
+                                {% include 'partials/_card.html' %}
+                            </div>
+                            <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
+                                {% include 'partials/_card.html' %}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <button class="btn btn-link">See more</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="most-wanted" class="most-wanted">
+            <div class="container">
+                <div class="title text-center">
+                    <h1>MOST WANTED</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col col-12 col-sm-12 col-md-3 col-lg-3 p-1">
+                            {% include 'partials/_card.html' %}
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-3 col-lg-3 p-1">
+                            {% include 'partials/_card.html' %}
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-3 col-lg-3 p-1">
+                            {% include 'partials/_card.html' %}
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-3 col-lg-3 p-1">
+                            {% include 'partials/_card.html' %}
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-center">
+                    <button class="btn btn-link">See more</button>
+                </div>
+            </div>
+        </section>
+
+    </section>
 
 {% endblock %}
 
