--- a/sws/templates/base.html
+++ b/sws/templates/base.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
+    <!-- Font Awesome -->
+    <script src="{% static 'js/font-awesome.all.min.js' %}"></script>
+
     <title>SWS</title>
 </head>
 <body>
