--- a/sws/sws/static/css/index.css
+++ b/sws/sws/static/css/index.css
@@ -12,6 +12,23 @@
     padding: 50px 0;
 }
 
+.index .service {
+    margin: 50px 0;
+}
+
+.index .service-item {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.index .service-icon {
+    height: 3rem!important;
+    margin-right: 1.5rem;
+    stroke-width: 2 !important;
+    width: 3rem!important;
+}
+
 @media only screen and (min-width: 320px) and (max-width: 425px) {
     .index .title {
         width: auto;
