--- a/sws/templates/base.html
+++ b/sws/templates/base.html
@@ -19,6 +19,10 @@
 
     {% block content %}{% endblock %}
 
+    {% include 'partials/_maps.html' %}
+
+    {% include 'partials/_footer.html' %}
+
     <!-- Bootstrap -->
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
