--- a/sws/sws/static/css/partials/_navbar.css
+++ b/sws/sws/static/css/partials/_navbar.css
@@ -1,3 +1,10 @@
+.navbar {
+    background-color: #fff;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
+
 .navbar .navbar-toggler {
     border: 0;
 }
