--- a/sws/templates/pages/index.html
+++ b/sws/templates/pages/index.html
@@ -69,36 +69,9 @@
             </div>
         </section>
 
-        <section id="service" class="service">
-            <div class="container">
-                <div class="row">
-                    <div class="col col-12 col-sm-12 col-md-4 col-lg-4 text-center service-item">
-                        <i class="fas fa-shipping-fast service-icon"></i>
-                        <div>
-                            <h6 class="text-uppercase m-0">Free shipping & return</h6>
-                            <small class="text-muted font-weight-light text-sm mb-0">Free Shipping over $$$</small>
-                        </div>
+        {% include 'partials/_services.html' %}
 
-                    </div>
-                    <div class="col col-12 col-sm-12 col-md-4 col-lg-4 pb-5 pt-5 text-center service-item">
-                        <i class="fas fa-hand-holding-usd service-icon"></i>
-                        <div>
-                            <h6 class="text-uppercase m-0">Money back guarantee</h6>
-                            <small class="text-muted font-weight-light text-sm mb-0">00 Days Money Back Guarantee</small>
-                        </div>
-
-                    </div>
-                    <div class="col col-12 col-sm-12 col-md-4 col-lg-4 text-center service-item">
-                        <i class="fas fa-phone-volume service-icon"></i>
-                        <div>
-                            <h6 class="text-uppercase m-0">+55 021 99999 9999</h6>
-                            <small class="text-muted font-weight-light text-sm mb-0">10am. - 18pm.</small>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </section>
+        {% include 'partials/_maps.html' %}
 
     </section>
 
