--- a/sws/templates/partials/_navbar.html
+++ b/sws/templates/partials/_navbar.html
@@ -2,8 +2,8 @@
 
 <link rel="stylesheet" href="{% static 'css/partials/_navbar.css' %}">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="#">SWS</a>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <a class="navbar-brand" href="/">SWS</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="/listings">Listings</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
