Listings and details

--- a/sws/templates/base.html
+++ b/sws/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}">
 
     <!-- Font Awesome -->
     <script src="{% static 'js/font-awesome.all.min.js' %}"></script>
