--- a/sws/templates/pages/index.html
+++ b/sws/templates/pages/index.html
@@ -33,7 +33,7 @@
                     </div>
 
                     <div class="text-center">
-                        <button class="btn btn-link">See more</button>
+                        <a class="btn btn-link text-uppercase" href="/listings">More</a>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="text-center">
-                    <button class="btn btn-link">See more</button>
+                    <a class="btn btn-link text-uppercase" href="/listings">More</a>
                 </div>
             </div>
         </section>
