--- a/sws/templates/partials/_card.html
+++ b/sws/templates/partials/_card.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{% static 'css/partials/_card.css' %}">
 
 <div class="card">
-    <a href="">
+    <a href="/details">
         <img class="card-img-top" src="https://i.picsum.photos/id/525/255/380.jpg?hmac=F7dT6_tvzZwlSfLN7ZNtKbEIk0j-MGapKSII1mkGHwE" alt="Card image cap">
         <div class="card-body py-2">
             <p class="text-muted text-sm mb-1">Ipsum</p>
