--- a/sws/sws/static/css/listings.css
+++ b/sws/sws/static/css/listings.css
@@ -16,3 +16,33 @@
 .listings .wrapper {
     margin: 100px 0 50px 0;
 }
+
+.listings .products-header {
+    display: flex;
+    font-size: .9rem;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+    color: #868e96;
+}
+
+.listings .products-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.listings .products-flex select {
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    width: auto;
+}
+.listings .products-flex .nav-link {
+    padding: 0.5rem 0.5rem;
+    margin: 0 0.25rem;
+}
+.listings .products-flex .nav-link.disabled {
+    border-bottom: 1px solid;
+}
