--- a/sws/sws/static/css/partials/_filters.css
+++ b/sws/sws/static/css/partials/_filters.css
@@ -9,7 +9,7 @@
 }
 
 .filters .list-group-item:first-of-type {
-    margin-top: 0;
+    margin-top: 0.5rem;
 }
 
 .filters .list-group-item:last-of-type {
