--- a/sws/sws/static/css/partials/_navbar.css
+++ b/sws/sws/static/css/partials/_navbar.css
@@ -1,8 +1,8 @@
 .navbar {
     background-color: #fff;
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,0.1);
+    -moz-box-shadow: 2px 2px 2px rgba(0,0,0,0.1);
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.1);
 }
 
 .navbar .navbar-toggler {
