--- a/sws/templates/pages/index.html
+++ b/sws/templates/pages/index.html
@@ -10,7 +10,7 @@
         <section id="latest" class="latest">
             <div class="container">
                 <div class="title text-center">
-                    <h1>LATEST ARRIVALS</h1>
+                    <h1 class="text-uppercase">Last arrivals</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
 
@@ -42,7 +42,7 @@
         <section id="most-wanted" class="most-wanted">
             <div class="container">
                 <div class="title text-center">
-                    <h1>MOST WANTED</h1>
+                    <h1 class="text-uppercase">Most wanted</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
 
