--- a/sws/templates/pages/index.html
+++ b/sws/templates/pages/index.html
@@ -17,18 +17,11 @@
                 <div class="latest-arrivals">
                     <div class="container">
                         <div class="row">
-                            <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
-                                {% include 'partials/_card.html' %}
-                            </div>
-                            <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
-                                {% include 'partials/_card.html' %}
-                            </div>
-                            <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
-                                {% include 'partials/_card.html' %}
-                            </div>
-                            <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
-                                {% include 'partials/_card.html' %}
-                            </div>
+                            {% for product in last_arrivals %}
+                                <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
+                                    {% include 'partials/_card.html' with product_obj=product %}
+                                </div>
+                            {% endfor %}
                         </div>
                     </div>
 
