--- a/sws/templates/pages/index.html
+++ b/sws/templates/pages/index.html
@@ -41,18 +41,11 @@
 
                 <div class="container">
                     <div class="row">
-                        <div class="col col-12 col-sm-12 col-md-3 col-lg-3 p-1">
-                            {% include 'partials/_card.html' %}
-                        </div>
-                        <div class="col col-12 col-sm-12 col-md-3 col-lg-3 p-1">
-                            {% include 'partials/_card.html' %}
-                        </div>
-                        <div class="col col-12 col-sm-12 col-md-3 col-lg-3 p-1">
-                            {% include 'partials/_card.html' %}
-                        </div>
-                        <div class="col col-12 col-sm-12 col-md-3 col-lg-3 p-1">
-                            {% include 'partials/_card.html' %}
-                        </div>
+                        {% for product in most_wanted %}
+                            <div class="col col-6 col-sm-6 col-md-3 col-lg-3 p-1">
+                                {% include 'partials/_card.html' with product_obj=product %}
+                            </div>
+                        {% endfor %}
                     </div>
                 </div>
 
@@ -62,7 +55,7 @@
             </div>
         </section>
 
-        {% include 'partials/_services.html' %}
+        <!-- {% include 'partials/_services.html' %} -->
 
         {% include 'partials/_maps.html' %}
 
