--- a/sws/templates/partials/_card.html
+++ b/sws/templates/partials/_card.html
@@ -4,7 +4,7 @@
 
 <div class="card">
     <a href="/details/{{ product.id }}">
-        <img class="card-img-top" src="{{ product.image_1 }}" alt="Card image cap">
+        <img class="card-img-top" src="media/{{ product.image_1 }}" alt="Card image cap">
         <div class="card-body py-2">
             <p class="text-muted text-sm mb-1">{{ product.category }}</p>
             <h3 class="h6 text-uppercase mb-1">{{ product.name }}</h3>
