--- a/sws/templates/partials/_footer.html
+++ b/sws/templates/partials/_footer.html
@@ -5,7 +5,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="footer-top col col-12 col-sm-12 col-md-6 col-lg-6 align-self-center text-center">
+            <!-- <div class="footer-top col col-12 col-sm-12 col-md-6 col-lg-6 align-self-center text-center">
                 <h4 class="text-uppercase">Contact us</h4>
                 <form class="form">
                     <div class="input-group mb-3">
@@ -34,7 +34,7 @@
                     </div>
                     <button type="submit" class="btn btn-outline-dark">Send message</button>
                 </form>
-            </div>
+            </div> -->
             <div class="footer-bottom col col-12 text-center">
                 <p>&copy; Developed by Assis</p>
             </div>
